...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/searchFeed"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:onClick="searchFeedOnClick"
            android:text="@string/searchFeed" />

    </LinearLayout>

    <ListView
        android:id="@+id/listItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice" >
...
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/wallet_button"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0.1"
        android:onClick="buttonWalletOnClick"
        android:text="@string/wallet"
        android:textSize="20sp" />
...
