<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewDialogue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/selectCard"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/card_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/selectCard"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/topUpAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/topUpAmount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
</LinearLayout>