<resources>
    <string name="appName">Bidding Market Simulator</string>

    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="info">Notice</string>
    <string name="biddingMarketSimulator">Bidding Market Simulator</string>
    <string name="itemTitle">Item Page</string>
    <string name="username">Username</string>
    <string name="enterChat">Send chat message</string>
    <string name="enterChatMessage">Enter chat message</string>
    <string name="chat">Chat</string>
    <string name="welcomeOnboarding">Welcome to Bidding Market Simulator!</string>
    <string name="biddingMarketSimulatorOnboarding2">Let\'s get you started!</string>
    <string name="searchFeed">Search</string>
    <string name="minBid">Min Bid</string>
    <string name="maxBid">Max Bid</string>
    <string name="moneyCount">0.00</string>
    <string name="currentBalanceText">Your Balance</string>
    <string name="buttonTopUp">Top Up</string>
    <string name="yourTransactions">Your Transactions</string>
    <string name="wallet">Wallet</string>
    <string name="goToProductView">Go to Product View</string>
    <string name="prodImgDesc">product image</string>
    <string name="bidHint">Enter Bid</string>
    <string name="bidButton">Bid</string>
    <string name="prodViewPage">Product View Page</string>
    <string name="prodReviewButton">Reviews</string>
    <string name="prodReviewPage">Product Review Page</string>
    <string name="reviewHint">Leave a detailed review here!</string>
    <string name="submitReview">Submit</string>
    <string name="sellerProfileButton">View Seller\'s Profile</string>
    <string name="profilePage">Profile Page</string>
    <string name="selectCard">Select Card</string>
    <string name="topUpAmount">Top Up Amount</string>
    <string name="login">Login</string>
    <string name="historyBid">Bid History</string>

</resources>
