...
            android:scaleType="centerCrop"
            android:src="@drawable/garden_bucket"
            tools:background="#999"
            tools:srcCompat="@drawable/garden_bucket" />

        <TextView
            android:id="@+id/productTitle"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="32sp"
...
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:text="" />

        <EditText
            android:id="@+id/withDrawAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:hint="@string/bidHint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bidButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
...
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/chatLabelTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/chat"
            android:textColor="#000000"
            android:textSize="24sp" />
...
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="" />

        <TextView
            android:id="@+id/ChatLog3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="" />
...
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="" />

        <TextView
            android:id="@+id/ChatLog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="" />

        <EditText
            android:id="@+id/chatInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:shadowColor="#C0C0C0"
            android:hint="@string/enterChatMessage"
            android:inputType="text"
            android:textSize="20sp"
            android:minHeight="48dp"/>

        <Button
            android:id="@+id/sendChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@android:color/holo_blue_dark"
...
